--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
-
+        <link rel="stylesheet" href="/css/stylesheet.css">
     </head>
     <body>
 
@@ -27,15 +26,15 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Scorix<br />
+                  Software Testing Engineer<br />
+                  scorix@gmail.com
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/yourusername/">github.com/scorix</a><br />
+                  <a href="http://twitter.com/yourusername/">twitter.com/scorix</a><br />
                 </p>
               </div>
             </div>
