--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ ul.posts span {
   color: #aaa;
 }
 
-.site .footer {
+footer {
   font-size: 80%;
   color: #666;
   border-top: 4px solid #eee;
@@ -107,22 +107,22 @@ ul.posts span {
   overflow: hidden;
 }
 
-.site .footer .contact {
+footer .contact {
   float: left;
   margin-right: 3em;
 }
 
-.site .footer .contact a {
+footer .contact a {
   color: #8085C1;
 }
 
-.site .footer .rss {
+footer .rss {
   margin-top: 1.1em;
   margin-right: -.2em;
   float: right;
 }
 
-.site .footer .rss img {
+footer .rss img {
   border: 0;
 }
 
