--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,8 @@
     </div>
     <div class="contact">
         <p>
-            <a href="http://github.com/yourusername/">github.com/scorix</a><br/>
-            <a href="http://twitter.com/yourusername/">twitter.com/scorix</a><br/>
+            <a href="http://github.com/scorix/">github.com/scorix</a><br/>
+            <a href="http://twitter.com/scorix/">twitter.com/scorix</a><br/>
         </p>
     </div>
 </footer>
