--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -246,12 +246,14 @@ a {
   zoom:1;
 }
 
-
 footer {
     font-size: 80%;
+    text-align: justify;
+    width: 42em;
+    line-height: 1.5em;
     color: #666;
     border-top: 4px solid #eee;
-    margin-top: 2em;
+    margin: 2em auto;
     overflow: hidden;
 }
 
