--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ ul.posts span {
   color: #aaa;
 }
 
-footer {
+.site .footer {
   font-size: 80%;
   color: #666;
   border-top: 4px solid #eee;
@@ -107,22 +107,22 @@ footer {
   overflow: hidden;
 }
 
-footer .contact {
+.site .footer .contact {
   float: left;
   margin-right: 3em;
 }
 
-footer .contact a {
+.site .footer .contact a {
   color: #8085C1;
 }
 
-footer .rss {
+.site .footer .rss {
   margin-top: 1.1em;
   margin-right: -.2em;
   float: right;
 }
 
-footer .rss img {
+.site .footer .rss img {
   border: 0;
 }
 
