--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -193,10 +193,9 @@ hr {
   background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
   padding: 8px 18px;
   border-radius: 50px;
-  border: 2px solid rgba(0, 0, 0, 0.7);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.7);
-  border-top: 2px solid rgba(0, 0, 0, 1);
-  color: rgba(255, 255, 255, 0.8);
+    border: 2px solid rgba(0, 0, 0, 0.7);
+    border-top-color: rgba(0, 0, 0, 1);
+    color: rgba(255, 255, 255, 0.8);
   font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
   font-size: 13px;
@@ -246,32 +245,76 @@ a {
   zoom:1;
 }
 
-footer {
-    font-size: 80%;
+
+
+/*****************************************************************************/
+/*
+/* Site
+/*
+/*****************************************************************************/
+
+.site {
+    font-size: 115%;
     text-align: justify;
     width: 42em;
+    margin: 3em auto 2em;
     line-height: 1.5em;
+}
+
+.site .header a {
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.site .header h1.title {
+    display: inline-block;
+    margin-bottom: 2em;
+}
+
+.site .header h1.title a {
+    color: #a00;
+}
+
+.site .header h1.title a:hover {
+    color: #000;
+}
+
+.site .header a.extra {
+    color: #aaa;
+    margin-left: 1em;
+}
+
+.site .header a.extra:hover {
+    color: #000;
+}
+
+.site .meta {
+    color: #aaa;
+}
+
+.site .footer {
+    font-size: 80%;
     color: #666;
     border-top: 4px solid #eee;
-    margin: 2em auto;
+    margin-top: 2em;
     overflow: hidden;
 }
 
-footer .contact {
+.site .footer .contact {
     float: left;
     margin-right: 3em;
 }
 
-footer .contact a {
+.site .footer .contact a {
     color: #8085C1;
 }
 
-footer .rss {
+.site .footer .rss {
     margin-top: 1.1em;
     margin-right: -.2em;
     float: right;
 }
 
-footer .rss img {
+.site .footer .rss img {
     border: 0;
 }
