--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,24 +31,25 @@
 
         {{ content }}
 
-        <div class="footer">
-            <div class="contact">
-                <p>
-                    Scorix<br/>
-                    Software Testing Engineer<br/>
-                    scorix@gmail.com
-                </p>
-            </div>
-            <div class="contact">
-                <p>
-                    <a href="http://github.com/scorix/">github.com/scorix</a><br/>
-                    <a href="http://twitter.com/scorix/">twitter.com/scorix</a><br/>
-                </p>
-            </div>
-        </div>
     </div>
 </div>
 <!-- /container -->
+
+<footer>
+    <div class="contact">
+        <p>
+            Scorix<br/>
+            Software Testing Engineer<br/>
+            scorix@gmail.com
+        </p>
+    </div>
+    <div class="contact">
+        <p>
+            <a href="https://github.com/scorix/">github.com/scorix</a><br/>
+            <a href="https://twitter.com/scorix/">twitter.com/scorix</a><br/>
+        </p>
+    </div>
+</footer>
 
 </body>
 </html>
