add a link of about.me

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
     <div class="contact">
         <p>
             <a href="https://github.com/scorix/">github.com/scorix</a><br/>
-            <a href="https://twitter.com/scorix/">twitter.com/scorix</a><br/>
+            <a href="https://about.me/scorix/">about.me/scorix</a><br/>
         </p>
     </div>
 </footer>
