add a link of about.me

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,15 +38,9 @@
 <footer>
     <div class="contact">
         <p>
-            Scorix<br/>
+            <a href="https://about.me/scorix/">Scorix</a><br/>
             Software Testing Engineer<br/>
-            scorix@gmail.com
-        </p>
-    </div>
-    <div class="contact">
-        <p>
-            <a href="https://github.com/scorix/">github.com/scorix</a><br/>
-            <a href="https://about.me/scorix/">about.me/scorix</a><br/>
+            <a href="mailto://scorix@gmail.com">scorix@gmail.com</a>
         </p>
     </div>
 </footer>
