--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,13 +26,11 @@
     </div>
 </header>
 
-<div class="container">
-    <div class="site">
+<article>
 
-        {{ content }}
+    {{ content }}
 
-    </div>
-</div>
+</article>
 <!-- /container -->
 
 <footer>
