add gauges in default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,18 @@
     </div>
 </footer>
 
+<script>
+    var _gauges = _gauges || [];
+    (function () {
+        var t = document.createElement('script');
+        t.type = 'text/javascript';
+        t.async = true;
+        t.id = 'gauges-tracker';
+        t.setAttribute('data-site-id', '5190a1c1108d7b2d06000002');
+        t.src = '//secure.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+    })();
+</script>
 </body>
 </html>
