--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,9 @@
     <div class="container">
         <h1 class="title"><a href="/">{{ site.name }}</a></h1>
 
-        <h2></h2>
-
-        <section id="downloads">
+        <div id="downloads">
             <a href="https://github.com/scorix" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+        </div>
     </div>
 </header>
 
@@ -42,6 +40,7 @@
         </p>
     </div>
 </footer>
+</body>
 
 <script>
     (function (i, s, o, g, r, a, m) {
@@ -58,7 +57,6 @@
 
     ga('create', 'UA-40878617-1', 'github.io');
     ga('send', 'pageview');
-
 </script>
-</body>
+
 </html>
