--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 <h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
 
 <section>
-{{ content }}
+    {{ content }}
 </section>
+
+<p class="meta">Posted by Scorix at {{ page.date | date_to_string }}</p>
+<p class="meta">Tags: {{ page.tags | array_to_sentence_string }}</p>
