--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,35 +12,36 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/stylesheet.css">
 </head>
+
+
 <body>
 
-<header>
-    <div class="container">
-        <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+<!-- HEADER -->
+<div id="header_wrap" class="outer">
+    <header class="inner">
+        <a id="forkme_banner" href="https://github.com/scorix">View on GitHub</a>
 
-        <div id="downloads">
-            <a href="https://github.com/scorix" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </div>
-    </div>
-</header>
+        <h1 id="project_title">{{ site.name }}</h1>
 
-<article class="container">
+        <h2 id="project_tagline">{{ site.desc }}</h2>
+    </header>
+</div>
 
-    {{ content }}
+<!-- MAIN CONTENT -->
+<div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
+        {{ content }}
+    </section>
+</div>
 
-</article>
-<!-- /container -->
-
-<footer>
-    <div class="contact">
-        <p>
-            <a href="https://about.me/scorix/">Scorix</a><br/>
-            Software Testing Engineer<br/>
-            <a href="mailto://scorix@gmail.com">scorix@gmail.com</a>
-        </p>
-    </div>
-</footer>
+<!-- FOOTER  -->
+<div id="footer_wrap" class="outer">
+    <footer class="inner">
+        <p>Contract me: <a href="mailto://scorix@gmail.com">scorix@gmail.com</a></p>
+    </footer>
+</div>
 </body>
+
 
 <script>
     (function (i, s, o, g, r, a, m) {
