--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <header class="inner">
         <a id="forkme_banner" href="https://github.com/scorix">View on GitHub</a>
 
-        <h1 id="project_title">{{ site.name }}</h1>
+        <h1 id="project_title"><a href="{{ site.url }}"> {{ site.name }} </a></h1>
 
         <h2 id="project_tagline">{{ site.desc }}</h2>
     </header>
