--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,7 +57,7 @@ Theme Styles
 
 body {
     box-sizing: border-box;
-    color:#373737;
+    color: #373737;
     background: #212121;
     font-size: 16px;
     font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
@@ -68,7 +68,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     margin: 10px 0;
     font-weight: 700;
-    color:#222222;
+    color: #222222;
     font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
     letter-spacing: -1px;
 }
@@ -76,6 +76,10 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 36px;
     font-weight: 700;
+}
+
+h1 a {
+    color: #ffffff;
 }
 
 h2 {
@@ -170,21 +174,19 @@ pre, code {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
 
-
-
 }
 
 pre {
     width: 100%;
     padding: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     overflow: auto;
 }
 
 code {
     padding: 3px;
     margin: 0 3px;
-    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
 pre code {
@@ -280,14 +282,14 @@ Full-Width Styles
 #forkme_banner {
     display: block;
     position: absolute;
-    top:0;
+    top: 0;
     right: 10px;
     z-index: 10;
     padding: 10px 50px 10px 10px;
     color: #fff;
     background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
     font-weight: 700;
-    box-shadow: 0 0 10px rgba(0,0,0,.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
 }
@@ -335,7 +337,7 @@ Full-Width Styles
     display: block;
     float: right;
     width: 90px;
-    height:70px;
+    height: 70px;
     text-indent: -5000px;
     overflow: hidden;
     background: url(../images/sprite_download.png) no-repeat bottom left;
@@ -345,7 +347,7 @@ Full-Width Styles
     display: block;
     float: right;
     width: 90px;
-    height:70px;
+    height: 70px;
     text-indent: -5000px;
     overflow: hidden;
     background: url(../images/sprite_download.png) no-repeat bottom right;
@@ -374,15 +376,13 @@ Full-Width Styles
     background: #212121;
 }
 
-
-
 /*******************************************************************************
 Small Device Styles
 *******************************************************************************/
 
 @media screen and (max-width: 480px) {
     body {
-        font-size:14px;
+        font-size: 14px;
     }
 
     #downloads {
