--- a/css/pagination.css
+++ b/css/pagination.css
@@ -14,7 +14,7 @@ ul {
 
 #post-pagination li, #post-pagination a {
     border: solid 1px #DEDEDE;
-    margin-right: 2;
+    margin-right: 2px;
 }
 
 #post-pagination .disabled {
