--- a/css/pagination.css
+++ b/css/pagination.css
@@ -1,16 +1,16 @@
 #post-pagination {
     border: 0;
     margin: 0;
-    padding: 0;
+    padding: 4px 6px;
 }
 
 #post-pagination li {
-    padding: 4px 6px;
     font-size: 11px;
     list-style: none;
 }
 
-#post-pagination li, #post-pagination a {
+#post-pagination li,
+#post-pagination a {
     border: solid 1px #DEDEDE;
     margin-right: 2px;
 }
