--- a/css/pagination.css
+++ b/css/pagination.css
@@ -1,10 +1,11 @@
 #post-pagination {
     border: 0;
     margin: 0;
-    padding: 4px 6px;
+    padding: 10px;
 }
 
 #post-pagination li {
+    padding: 4px 6px;
     font-size: 11px;
     list-style: none;
 }
