--- a/css/pagination.css
+++ b/css/pagination.css
@@ -1,43 +1,43 @@
-#post-pagination {
+.pagination {
     border: 0;
     margin: 0;
     padding: 10px;
 }
 
-#post-pagination li {
+.pagination li {
     padding: 4px 6px;
     font-size: 11px;
     list-style: none;
 }
 
-#post-pagination li,
-#post-pagination a {
+.pagination li,
+.pagination a {
     border: solid 1px #DEDEDE;
     margin-right: 2px;
 }
 
-#post-pagination .disabled {
+.pagination .disabled {
     color: #888888;
     display: block;
     float: left;
     font-weight: bold;
 }
 
-#post-pagination .next a,
-#post-pagination .previous a {
+.pagination .next a,
+.pagination .previous a {
     font-weight: bold;
     border: solid 1px #FFFFFF;
 }
 
-#post-pagination .current {
+.pagination .current {
     color: #000000;
     font-weight: bold;
     display: block;
     float: left;
 }
 
-#post-pagination a:link,
-#post-pagination a:visited {
+.pagination a:link,
+.pagination a:visited {
     color: #0033CC;
     display: block;
     float: left;
@@ -45,6 +45,6 @@
     text-decoration: none;
 }
 
-#post-pagination a:hover {
+.pagination a:hover {
     text-decoration: none;
 }
