--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,5 +5,5 @@ layout: default
 
 {{ content }}
 
-<p class="meta">Posted by <a href="https://about.me/scorix">Scorix</a> at {{ page.date | date_to_string }}</p>
-<p class="meta">Tags: {{ page.tags | array_to_sentence_string }}</p>
+<p class="author">Posted by <a href="https://about.me/scorix">Scorix</a> at {{ page.date | date_to_string }}</p>
+<p class="tags">Tags: {{ page.tags | array_to_sentence_string }}</p>
