--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -131,12 +131,12 @@ a {
 
 #main_content a:hover {
     color: #0069ba;
-    text-shadow: #0090ff 0px 0px 2px;
+    text-shadow: #0090ff 0 0 2px;
 }
 
 footer a:hover {
     color: #43adff;
-    text-shadow: #0090ff 0px 0px 2px;
+    text-shadow: #0090ff 0 0 2px;
 }
 
 em {
@@ -149,10 +149,9 @@ strong {
 
 img {
     position: relative;
-    margin: 0 auto;
     max-width: 739px;
     padding: 5px;
-    margin: 10px 0 10px 0;
+    margin: 0 auto;
     border: 1px solid #ebebeb;
 
     box-shadow: 0 0 5px #ebebeb;
@@ -312,7 +311,7 @@ Full-Width Styles
     color: #fff;
     font-size: 42px;
     font-weight: 700;
-    text-shadow: #111 0px 0px 10px;
+    text-shadow: #111 0 0 10px;
 }
 
 #project_tagline {
@@ -320,7 +319,7 @@ Full-Width Styles
     font-size: 24px;
     font-weight: 300;
     background: none;
-    text-shadow: #111 0px 0px 10px;
+    text-shadow: #111 0 0 10px;
 }
 
 #downloads {
@@ -330,7 +329,7 @@ Full-Width Styles
     bottom: -40px;
     right: 0;
     height: 70px;
-    background: url('../images/icon_download.png') no-repeat 0% 90%;
+    background: url('../images/icon_download.png') no-repeat 0 90%;
 }
 
 .zip_download_link {
@@ -428,4 +427,12 @@ Small Device Styles
         font-size: 11px;
     }
 
+}
+
+/*******************************************************************************
+Author and tags
+*******************************************************************************/
+p.author,
+p.tags {
+    margin: -5px 0 15px 0;
 }
