add stylesheet of pagination

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -432,7 +432,12 @@ Small Device Styles
 /*******************************************************************************
 Author and tags
 *******************************************************************************/
-p.author,
+p.author {
+    margin: -5px 0 15px 0;
+    float: left;
+}
+
 p.tags {
     margin: -5px 0 15px 0;
+    float: right;
 }
