add stylesheet of pagination

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -263,10 +263,6 @@ img {
     max-width: 100%;
 }
 
-section {
-    margin: 0 auto 40px auto;
-}
-
 /*******************************************************************************
 Full-Width Styles
 *******************************************************************************/
@@ -437,9 +433,11 @@ Small Device Styles
 Author and tags
 *******************************************************************************/
 p.author {
+    margin: -5px 0 15px 0;
     float: left;
 }
 
 p.tags {
+    margin: -5px 0 15px 0;
     float: right;
 }
