add stylesheet of pagination

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,8 @@
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
     <footer class="inner">
-        <p>Contract me: <a href="mailto://scorix@gmail.com">scorix@gmail.com</a></p>
+        <p>Posted by <a href="https://about.me/scorix">Scorix</a> at {{ page.date | date_to_string }}</p>
+        <p>My email: <a href="mailto://scorix@gmail.com">scorix@gmail.com</a></p>
     </footer>
 </div>
 </body>
