--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -368,7 +368,7 @@ Full-Width Styles
 }
 
 #main_content {
-    padding: 40px 0 80px 0;
+    padding: 40px 0;
 }
 
 #footer_wrap {
@@ -427,15 +427,4 @@ Small Device Styles
         font-size: 11px;
     }
 
-}
-
-/*******************************************************************************
-Author and tags
-*******************************************************************************/
-p.author {
-    float: left;
-}
-
-p.tags {
-    float: right;
 }
