--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
     <footer class="inner">
-        {% if page %}
+        {% if page.date %}
             <p>Posted by <a href="https://about.me/scorix">Scorix</a> at {{ page.date | date_to_string }}</p>
         {% endif %}
         <p>My email: <a href="mailto://scorix@gmail.com">scorix@gmail.com</a></p>
