--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,11 +42,15 @@
             <p>Posted by <a href="https://about.me/scorix">Scorix</a> at {{ page.date | date_to_string }}</p>
         {% endif %}
         <p>My email: <a href="mailto://scorix@gmail.com">scorix@gmail.com</a></p>
+        <div class="social">
+            <g:plusone size="small"></g:plusone>
+        </div>
     </footer>
 </div>
 </body>
 
 
+<script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
