--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,16 +42,18 @@
             <p>Posted by <a href="https://about.me/scorix">Scorix</a> at {{ page.date | date_to_string }}</p>
         {% endif %}
         <p>My email: <a href="mailto://scorix@gmail.com">scorix@gmail.com</a></p>
-        <div class="social">
-            <g:plusone size="small"></g:plusone>
-        </div>
+        <div class="g-plusone" data-annotation="inline" data-width="300"></div>
     </footer>
 </div>
 </body>
 
-
-<script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
 <script>
+    (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/plusone.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+    })();
+
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
