--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             <p>Posted by <a href="https://about.me/scorix">Scorix</a> at {{ page.date | date_to_string }}</p>
         {% endif %}
         <p>My email: <a href="mailto://scorix@gmail.com">scorix@gmail.com</a></p>
-        <div class="g-plusone" data-annotation="inline" data-width="300"></div>
+        <g:plusone size="small"></g:plusone>
     </footer>
 </div>
 </body>
