--- a/css/pagination.css
+++ b/css/pagination.css
@@ -2,6 +2,8 @@
     border: 0;
     margin: 0;
     padding: 10px 80px;
+    border: solid 1px #DEDEDE;
+    margin-right: 2px;
 }
 
 .pagination li {
@@ -11,19 +13,14 @@
     float: left;
 }
 
-.pagination a {
-    border: solid 1px #DEDEDE;
-    margin-right: 2px;
-}
-
 .pagination .disabled {
     color: #888888;
     display: block;
     font-weight: bold;
 }
 
-.pagination .next a,
-.pagination .previous a {
+.pagination .next,
+.pagination .previous {
     font-weight: bold;
     border: solid 1px #FFFFFF;
 }
@@ -38,7 +35,6 @@
 .pagination a:visited {
     color: #0033CC;
     display: block;
-    padding: 3px 6px;
     text-decoration: none;
 }
 
