add tag index page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -412,6 +412,10 @@ li.archive_list {
     padding-bottom: 10px;
 }
 
+li.inline {
+    display: inline
+}
+
 /*******************************************************************************
 Small Device Styles
 *******************************************************************************/
