add tag index page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -416,6 +416,16 @@ li.inline {
     display: inline
 }
 
+div.meta_wrapper {
+    border: 1px solid #C9C6C3;
+    color: #666;
+    font-size: 12px;
+    line-height: 20px;
+    margin: 0 0 20px;
+    padding: 1px 0;
+    text-transform: uppercase
+}
+
 /*******************************************************************************
 Small Device Styles
 *******************************************************************************/
