add tag index page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -417,7 +417,7 @@ li.inline {
 }
 
 div.meta_wrapper {
-    border: 1px solid #C9C6C3;
+    border: 1px 0 solid #C9C6C3;
     color: #666;
     font-size: 12px;
     line-height: 20px;
