--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,9 @@ layout: default
 <h3>{{ page.title }}</h3>
 <div class="meta_wrapper">
     <time datetime="{{page.date | date: '%Y-%m-%d'}}">{{page.date | date: '%B %e, %Y'}}</time>
-    <ul class="tag_list_in_post">{% for tag in page.tags %}
-        <li class="inline tag_list_item"><a class="tag_list_link" href="/tag/{{ tag }}">{{ tag }}</a></li>
+    <ul class="tag_list_in_post">
+        {% for tag in page.tags %}
+            <li class="inline tag_list_item">{{ tag }}</li>
         {% endfor %}
     </ul>
 </div>
